# tracknarrator

./: .gitignore  CHANGELOG.md  PLAN-ingest-barber.md  README.md
backend/: .coverage  Makefile  README.md  debug_response.py  pyproject.toml  tracknarrator.db
backend/demo/export/: summary.json
backend/scripts/: accept_step10.sh  accept_step11.sh  accept_step12.sh  accept_step13.sh  accept_step16.sh  accept_step17.sh  ingest_barber_demo.py  prepare_barber_from_raw.py  shrink_barber_bundle.py
backend/src/tracknarrator/: __init__.py  api.py  audit.py  cards.py  coach.py  coach_score.py  config.py  csrf.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_api_bundle.py  test_api_coach_score.py  test_api_export.py  test_api_ingest_errors.py  test_api_narrative.py  test_api_sessions.py  test_api_shared_summary.py  test_api_shares.py  test_api_summary.py  test_api_summary_ext.py  test_api_trd_inspect.py  test_api_upload_gpx.py  test_api_viz_contract.py  test_api_weather_inspect.py  test_barber_ingest_robustness.py  test_cards.py  test_coach.py  test_e2e_pipeline.py  test_encodings_delimiters.py  test_events.py  test_export_cli.py  test_export_includes_coach_score.py  test_export_manifest.py  test_export_pack_narrative.py  test_helpers.py  test_import_gpx.py  test_importer_racechrono.py  test_importers_mylaps_sections.py  test_importers_trd_long.py  test_importers_weather.py  test_importers_weather_aliases.py  test_ingest_endpoints.py  test_narrative_fallback.py  test_narrative_toggle.py  test_narrative_v02.py  test_seed_endpoint.py  test_share_tokens.py  test_share_utils.py  (+7 more)
(+81 files in other folders)
